fix Slider dragging causing select cursor on Safari

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,6 +18,8 @@ html {
 }
 
 .no-select {
+  cursor: default;
+  -webkit-user-select: none;
   user-select: none;
 }
 
